fix(pagination): shift font size for new token
affects: @entur/menu

--- a/packages/menu/src/Pagination.scss
+++ b/packages/menu/src/Pagination.scss
@@ -99,7 +99,7 @@
   align-items: baseline;
   cursor: default;
   display: flex;
-  font-size: $font-sizes-extra-large;
+  font-size: $font-sizes-extra-large2;
   height: $space-extra-large;
   justify-content: center;
   user-select: none;
